--- a/sass/components/_section-advantages.scss
+++ b/sass/components/_section-advantages.scss
@@ -21,19 +21,19 @@
     }
 
     &--antenna::before {
-        background-image: url(../../img/adv-antenna.svg);
+        background-image: url(.././img/adv-antenna.svg);
     }
 
     &--clock::before {
-        background-image: url(../../img/adv-clock.svg);
+        background-image: url(.././img/adv-clock.svg);
     }
 
     &--diagram::before {
-        background-image: url(../../img/adv-diagram.svg);
+        background-image: url(.././img/adv-diagram.svg);
     }
 
     &--astronaut::before {
-        background-image: url(../../img/adv-astronaut.svg);
+        background-image: url(.././img/adv-astronaut.svg);
     }
 }
 
