--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -8,7 +8,7 @@
     background-image: linear-gradient(to right,
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
-        url(../../img/hero.jpg);
+        url(.././img/hero.jpg);
 }
 
 .hero__title {
