Виправляє структуру scss-файлів та окремі елементи модалки

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,8 @@
 @import './components/section_doings';
 @import './components/section_team';
 @import './components/section-customer';
+@import './components/portfolio-filters';
+@import './components/section-portfolio';
 @import './components/_social-media-link';
 @import './components/page-footer';
 @import './components/modal'
