--- a/css/main.css
+++ b/css/main.css
@@ -167,6 +167,7 @@ img {
 }
 
 .logo--footer {
+  display: block;
   margin-bottom: 20px;
 }
 
@@ -379,6 +380,110 @@ img {
 
 .customer__icon {
   fill: currentColor;
+}
+
+.portfolio-filter__list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 34px;
+}
+
+.portfolio-filter__item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.portfolio-filter__button {
+  padding: 6px 22px;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: inherit;
+  color: #212121;
+  background: #F5F4FA;
+  border: none;
+  border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-filter__button:hover, .portfolio-filter__button:focus {
+  color: #FFFFFF;
+  background-color: #2196F3;
+  cursor: pointer;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.portfolio-work__list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -30px;
+  margin-bottom: -30px;
+}
+
+.portfolio-work__item {
+  margin-right: 30px;
+  margin-bottom: 30px;
+  flex-basis: calc(33.3333333333% - 30px);
+  background-color: #FFFFFF;
+}
+
+.portfolio-work__link {
+  display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-work__link:hover, .portfolio-work__link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.portfolio-work__thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-work__overlay {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-work__link:hover .portfolio-work__overlay {
+  transform: translateY(0);
+}
+
+.portfolio-work__descr {
+  padding: 63px 24px;
+  background: rgba(33, 150, 243, 0.9);
+  font-size: 18px;
+  line-height: 1.56;
+  color: #FFFFFF;
+}
+
+.portfolio-work__content {
+  border: 1px solid #EEEEEE;
+  border-top: none;
+}
+
+.portfolio-work__subtitle {
+  margin-bottom: 6px;
+  padding-right: 24px;
+  padding-left: 24px;
+  padding-top: 20px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: #212121;
+}
+
+.portfolio-work__text {
+  margin-bottom: 20px;
+  padding-right: 24px;
+  padding-left: 24px;
+  font-size: 16px;
+  line-height: 1.88;
+  color: #757575;
 }
 
 .social-media__list {
