--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -125,7 +125,7 @@
 .modal__checkbox:checked+.modal__checkmark {
     border-color: $acent-color;
     background-color: $acent-color;
-    background-image: url(../../img/checkmark.svg);
+    background-image: url(.././img/checkmark.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-origin: border-box;
